[gd_scene load_steps=3 format=3 uid="uid://cd4uhjloypf3p"]

[ext_resource type="Theme" uid="uid://cbi2ff3qcal0c" path="res://function_theme.tres" id="1_rr3py"]
[ext_resource type="Script" path="res://equation_container.gd" id="2_kh7g7"]

[node name="MarginContainer" type="MarginContainer"]
custom_minimum_size = Vector2(475, 0)
offset_right = 518.0
offset_bottom = 1085.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_rr3py")
theme_override_constants/separation = 0
script = ExtResource("2_kh7g7")

[node name="debug_ui" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="change_func" type="Button" parent="VBoxContainer/debug_ui"]
layout_mode = 2
text = "change_func"

[node name="v_shift" type="Button" parent="VBoxContainer/debug_ui"]
layout_mode = 2
size_flags_vertical = 0
text = "v_shift"

[node name="h_shift" type="Button" parent="VBoxContainer/debug_ui"]
layout_mode = 2
size_flags_vertical = 0
text = "h_shift"

[node name="v_scale" type="Button" parent="VBoxContainer/debug_ui"]
layout_mode = 2
size_flags_vertical = 0
text = "v_scale"

[node name="h_scale" type="Button" parent="VBoxContainer/debug_ui"]
layout_mode = 2
size_flags_vertical = 0
text = "h_scale"

[node name="v_flip" type="Button" parent="VBoxContainer/debug_ui"]
layout_mode = 2
size_flags_vertical = 0
text = "v_flip"

[node name="h_flip" type="Button" parent="VBoxContainer/debug_ui"]
layout_mode = 2
size_flags_vertical = 0
text = "h_flip"

[node name="ui_box" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(458, 750)
layout_mode = 2
size_flags_vertical = 3
color = Color(0.129412, 0.0745098, 0.0509804, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ui_box"]
layout_mode = 0
offset_left = 2.0
offset_right = 472.0
offset_bottom = 1037.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ui_box/MarginContainer"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="function_box" type="HBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="spacing" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_box"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_box/VBoxContainer"]
layout_mode = 2
text = " "

[node name="mainTerm" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_box/VBoxContainer"]
layout_mode = 2

[node name="squared" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_box"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "2"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_box"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_box/VBoxContainer2"]
layout_mode = 2
text = " "

[node name="vShift" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_box/VBoxContainer2"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="function_template" type="HBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="function_template" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_template"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_template"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_template/VBoxContainer"]
layout_mode = 2
text = " "

[node name="mainTerm" type="RichTextLabel" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_template/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "f(x) = [color=\"#76b5c5\"]±[/color][color=\"#BDB76B\"]a[/color]([color=\"#eab676\"]±[/color][color=\"#778899\"]b[/color]x [color=\"#FA8072\"] + c[/color])"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="squared" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_template"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "2"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_template"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_template/VBoxContainer3"]
layout_mode = 2
text = " "

[node name="v_shift" type="RichTextLabel" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_template/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=\"#9370db\"] + d[/color]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Label4" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/function_template"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="spacing2" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="changeFunc" type="OptionButton" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 2
popup/item_0/text = "Line"
popup/item_1/text = "Parabola"
popup/item_1/id = 1

[node name="vShift" type="HBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/vShift"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.576471, 0.439216, 0.858824, 1)
text = "Vertical shift:"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/vShift"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -9.0
max_value = 9.0
alignment = 2
update_on_text_changed = true

[node name="hShift" type="HBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/hShift"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.980392, 0.501961, 0.447059, 1)
text = "Horizontal shift:"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/hShift"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -9.0
max_value = 9.0
alignment = 2
update_on_text_changed = true
select_all_on_focus = true

[node name="vScale" type="HBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/vScale"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.741176, 0.717647, 0.419608, 1)
text = "Vertical scale:"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/vScale"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 9.0
step = 0.1
value = 1.0
alignment = 2
update_on_text_changed = true
select_all_on_focus = true

[node name="hScale" type="HBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/hScale"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.466667, 0.533333, 0.6, 1)
text = "Horizontal scale:"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/hScale"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 9.0
step = 0.1
value = 1.0
alignment = 2
update_on_text_changed = true
select_all_on_focus = true

[node name="vFlip" type="HBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/vFlip"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.462745, 0.709804, 0.772549, 1)
text = "Vertical reflection:"

[node name="Button" type="Button" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/vFlip"]
layout_mode = 2
toggle_mode = true
text = "±"

[node name="hFlip" type="HBoxContainer" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/hFlip"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.917647, 0.713726, 0.462745, 1)
text = "Horizontal reflection:"

[node name="Button" type="Button" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer/hFlip"]
layout_mode = 2
toggle_mode = true
text = "±"

[node name="Button" type="Button" parent="VBoxContainer/ui_box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CAST SPELL"

[connection signal="pressed" from="VBoxContainer/debug_ui/change_func" to="VBoxContainer" method="_on_debug_change_func"]
[connection signal="pressed" from="VBoxContainer/debug_ui/v_shift" to="VBoxContainer" method="_on_debug_v_shift"]
[connection signal="pressed" from="VBoxContainer/debug_ui/h_shift" to="VBoxContainer" method="_on_debug_h_shift"]
[connection signal="pressed" from="VBoxContainer/debug_ui/v_scale" to="VBoxContainer" method="_on_debug_v_scale"]
[connection signal="pressed" from="VBoxContainer/debug_ui/h_scale" to="VBoxContainer" method="_on_debug_h_scale"]
[connection signal="pressed" from="VBoxContainer/debug_ui/v_flip" to="VBoxContainer" method="_on_debug_v_flip"]
[connection signal="pressed" from="VBoxContainer/debug_ui/h_flip" to="VBoxContainer" method="_on_debug_h_flip"]
[connection signal="item_selected" from="VBoxContainer/ui_box/MarginContainer/VBoxContainer/changeFunc" to="VBoxContainer" method="_on_change_func"]
[connection signal="value_changed" from="VBoxContainer/ui_box/MarginContainer/VBoxContainer/vShift/SpinBox" to="VBoxContainer" method="_on_v_shift_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ui_box/MarginContainer/VBoxContainer/hShift/SpinBox" to="VBoxContainer" method="_on_h_shift_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ui_box/MarginContainer/VBoxContainer/vScale/SpinBox" to="VBoxContainer" method="_on_v_scale_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ui_box/MarginContainer/VBoxContainer/hScale/SpinBox" to="VBoxContainer" method="_on_h_scale_value_changed"]
[connection signal="pressed" from="VBoxContainer/ui_box/MarginContainer/VBoxContainer/vFlip/Button" to="VBoxContainer" method="_on_v_flip"]
[connection signal="pressed" from="VBoxContainer/ui_box/MarginContainer/VBoxContainer/hFlip/Button" to="VBoxContainer" method="_on_h_flip"]
